--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,17 @@ requires-python = ">=3.13"
 dependencies = [
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
+    "tomli>=2.3.0",
     "tomli-w>=1.2.0",
     "transformers>=4.57.1",
 ]
 
 [project.scripts]
 coconut = "inno_swe_reasoner.coconut.train:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/inno_swe_reasoner"]
