--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "loguru>=0.7.3",
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
     "tomli>=2.3.0",
     "tomli-w>=1.2.0",
+    "torch>=2.9.0",
     "transformers>=4.57.1",
 ]
 
