--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "datasets>=4.3.0",
+    "jaxtyping>=0.3.3",
     "loguru>=0.7.3",
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
