--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "datasets>=4.3.0",
+    "hf-transfer>=0.1.9",
     "jaxtyping>=0.3.3",
     "loguru>=0.7.3",
     "pydantic>=2.12.3",
