added ruff and pre-commit dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,9 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/inno_swe_reasoner"]
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.3.0",
+    "ruff>=0.14.2",
+]
