--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "tomli-w>=1.2.0",
     "torch>=2.9.0",
     "transformers>=4.57.1",
+    "wandb>=0.22.2",
 ]
 
 [project.scripts]
