--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "loguru>=0.7.3",
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
+    "tensorboard>=2.20.0",
     "tomli>=2.3.0",
     "tomli-w>=1.2.0",
     "torch>=2.9.0",
