--- a/config/cf/train.toml
+++ b/config/cf/train.toml
@@ -1,14 +1,14 @@
 [model]
-name = "Qwen/Qwen2.5-0.5B-Instruct"
+name = "Qwen/Qwen2.5-1.5B-Instruct"
 
 [data]
 name = "open-r1/codeforces-cots"
 split = "solutions_w_editorials_decontaminated"
-num_samples = 2
+max_seq_length = 1536
 
 [wandb]
 project = "DEMO"
-name = "demo_with_small_model"
+name = "demo_with_small_model_1.5B"
 
 [checkpoint]
 interval = 1
