--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ coconut = "inno_swe_reasoner.coconut.train:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.ruff.lint]
+select = ["F", "I"]
+ignore = ["F722", "F821"] # Need to ignore for jaxtyping (https://docs.kidger.site/jaxtyping/faq/)
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/inno_swe_reasoner"]
 
