--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "tomli>=2.3.0",
     "tomli-w>=1.2.0",
     "torch>=2.9.0",
+    "tqdm>=4.67.1",
     "transformers>=4.57.1",
     "wandb>=0.22.2",
 ]
